<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/action_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/action_profile" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_menu_search"
            android:title="@string/action_search" />
    </group>

    <item android:title="@string/separator_communicate">
        <menu>
            <item
                android:id="@+id/nav_invite"
                android:icon="@drawable/ic_menu_invite"
                android:title="@string/action_invite" />
        </menu>
    </item>

</menu>
