<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rellay1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_bg_gradient"
    android:paddingBottom="20dp">

    <RelativeLayout
        android:id="@+id/imgUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/circle_border">

        <ImageView
            android:id="@+id/iv_profile_picture"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="9dp"
            android:adjustViewBounds="true"
            android:background="@drawable/circle"
            android:contentDescription="@string/nav_header_desc"
            android:padding="3dp"
            android:scaleType="centerInside"
            app:srcCompat="@mipmap/ic_launcher_round" />
    </RelativeLayout>

    <Button
        android:id="@+id/bt_profile"
        android:layout_width="wrap_content"
        android:layout_height="30dip"
        android:layout_below="@id/linlay1"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        tools:text="Editar perfil" />

    <RelativeLayout
        android:id="@+id/rellay2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgUser"
        android:layout_marginStart="8dp">

        <TextView
            android:id="@+id/tv_profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_header_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tv_profile_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_profile_name"
            android:text="@string/nav_header_subtitle"
            android:textColor="@color/solidCircle" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linlay1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_post_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="45" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_fragment_post"
                android:textColor="@color/solidCircle"
                tools:text="Publicaciones" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_follows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_follows_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="45" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_fragment_follows"
                android:textColor="@color/solidCircle"
                tools:text="Seguidos" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_followers_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="45" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_fragment_followers"
                android:textColor="@color/solidCircle"
                tools:text="Seguidores" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
    <!--<android.support.constraint.ConstraintLayout-->
    <!--android:id="@+id/cl_header"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="150dp"-->
    <!--android:orientation="vertical"-->
    <!--android:padding="8dp">-->

    <!---->




    <!--<Button-->
    <!--android:id="@+id/bt_profile"-->
    <!--style="@style/Widget.AppCompat.Button.Small"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginEnd="8dp"-->
    <!--android:textColor="@color/common_google_signin_btn_text_dark_focused"-->
    <!--android:textSize="12sp"-->
    <!--app:layout_constraintEnd_toEndOf="parent"-->
    <!--app:layout_constraintTop_toBottomOf="@+id/ll_followers"-->
    <!--tools:text="Editar Perfil" />-->

    <!--</android.support.constraint.ConstraintLayout>-->